--- a/templates/games.html
+++ b/templates/games.html
@@ -47,11 +47,11 @@
           <div class="buttons">
             <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
               <i class="material-icons">edit</i>
-              Edit Review
+              Edit 
             </a><!--Edit Review Button-->  
             <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn ">
               <i class="material-icons">delete</i>
-              Delete Review
+              Delete 
             </a><!--Delete Review Button--> 
           </div><!--Edit and Delete Review Buttons-->    
       </div>
