--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="game_page_html">
 <div class="row">
   <div class="col s12 game-name">
     {{game.game_name}}
   </div>
 </div><!--Game Name-->
 <div class="row">
-  <div class="col s12 m6">
+  <div class="col-sm-12 col-md-6">
     <img src = "{{game.image}}" class="game-page-image">
   </div><!--Game Image-->
-  <div class="col s12 m6">
+  <div class="col-sm-12 col-md-6">
     <div class="game_text">
       <div class="rating">
         <i class="far fa-star"></i>
@@ -57,5 +58,6 @@
       Delete 
     </a><!--Delete Review Button--> 
   </div>
+</div>
 </div>
 {% endblock %}
