bg colour changed for form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,7 +85,7 @@
  
 /*Add/Edit Form Styling*/
  form {
-     background-color: rgba(0, 0, 0, 0.5);
+     background-color:#696969;
      color: white;
      border-radius: 2%;
  }/*Form bg color, font color and border radius*/
