--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 				<a href="{{url_for('view_games')}}" class="brand-logo">WhatGame?</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="{{url_for('view_games')}}">View All Reviews</a></li>
+					<li><a href="{{url_for('all_games')}}">View All Reviews</a></li>
 					<li><a href="{{url_for('add_review')}}">Add a Review</a></li>
 					<li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
 				</ul>
