--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -9,7 +9,7 @@
         <div class="all-games-summary">
           <div class="row">
             <div class="col-sm-12 col-md-3 center_icon_and_text">
-              <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
+              <a href="{{url_for('show_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
               <i class="material-icons">remove_red_eye</i>
               <br>
               View Full Review
