--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -14,13 +14,14 @@
               <br>
               View Full Review
               </a>
-    </div>
-    <div class="col-sm-12 col-md-3">
-    {{game.game_name}}<br> Rating: {{game.rating}}
-    </div><!--Game Name & Rating-->
-    </li>
+            </div>
+            <div class="col-sm-12 col-md-3 name_and_rating">
+              {{game.game_name}}<br> Rating: {{game.rating}}
+            </div><!--Game Name & Rating-->
+        </div>
+      </li>
     {% endfor %}
-  </ul>
+    </ul>
   </div>
   </div>
 
