--- a/templates/newplatform.html
+++ b/templates/newplatform.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
+<div class="row buttons">
 <div class="col s12">
   <h2>Thank You for adding the platform to our collection</h2>
   <h2>Click the button below to add a review</h2>
