--- a/templates/addconfirmation.html
+++ b/templates/addconfirmation.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
-  <div class="col s12">
+<div class="row buttons">
+  <div class="col s12 ">
     <h2>Thank You for adding your review to our collection</h2>
     <h2>Have a look at the full list of reviews available by clicking the button below</h2>
      <a href="{{url_for('view_games')}}"class="waves-effect waves-light btn edit_btn confirmation-button">
