--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,11 @@
 	<link rel="stylesheet" href="{{url_for('static',filename='css/style.css' )}}">
 </head>
 <body>
+<div class="wrapper">
 	<header>
 		<nav>
 			<div class="nav-wrapper black">
-				<a href="{{url_for('view_games')}}" class="brand-logo">WhatGame?</a>
+				<a href="{{url_for('all_games')}}" class="brand-logo">WhatGame?</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="{{url_for('all_games')}}">View All Reviews</a></li>
@@ -37,7 +38,8 @@
 	  {% block content %}
 	  {% endblock %}
     </div>
-    <footer class="page-footer">
+    </div>
+    <footer>
         © David Tynan 2020
       </footer>
     
