--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -8,16 +8,17 @@
       <li>
         <div class="all-games-summary">
           <div class="row">
-            <div class="col-sm-12 col-md-3 center_icon_and_text">
+            <div class="center_icon_and_text">
               <a href="{{url_for('show_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
-              <i class="material-icons">remove_red_eye</i>
-              <br>
-              View Full Review
+                <i class="material-icons">remove_red_eye</i>
+                <br>
+                View Full Review
               </a>
             </div>
-            <div class="col-sm-12 col-md-3 name_and_rating">
+            <div class="name_and_rating">
               {{game.game_name}}<br> Rating: {{game.rating}}
             </div><!--Game Name & Rating-->
+          </div>
         </div>
       </li>
     {% endfor %}
