edit confirmation message in centre of page

--- a/templates/edit_review_confirmation.html
+++ b/templates/edit_review_confirmation.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
+<div class="row buttons">
   <div class="col s12">
     <h2>Thank You for your edit to this game review</h2>
     <h2>You can return to the review and see your changes by clicking the button below</h2>
