--- a/templates/addconfirmation.html
+++ b/templates/addconfirmation.html
@@ -4,7 +4,7 @@
   <div class="col s12 ">
     <h2>Thank You for adding your review to our collection</h2>
     <h2>Have a look at the full list of reviews available by clicking the button below</h2>
-     <a href="{{url_for('view_games')}}"class="waves-effect waves-light btn edit_btn confirmation-button">
+     <a href="{{url_for('all_games')}}"class="waves-effect waves-light btn edit_btn confirmation-button">
        <i class="material-icons">view_list</i>
         View Reviews
      </a><!--Edit Review Button-->  
