--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,16 @@
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="{{url_for('all_games')}}">View All Reviews</a></li>
+                    <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
 					<li><a href="{{url_for('add_review')}}">Add a Review</a></li>
 					<li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
 				</ul>
                 <ul class="side-nav black" id="mobile-demo">
                     <li><a href="{{url_for('view_games')}}">View All Reviews</a></li>
+                    <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
                     <li><a href="{{url_for('add_review')}}">Add a Review</a></li>
                     <li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
+                    
                 </ul>
 			</div>
 		</nav>
