--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -1,96 +1,91 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class = "form-bg">
 <h1>Add a Game Review</h1>
 <h2>If you cant find your platform listed, you can add a new platform to our collection by clicking 'Add a Platform' at the top of the page</h2>
-<div class="container">
 <div class="row">
-    <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
-      <div class="row">   
-        <div class="input-field col s12">
-          <i class="material-icons prefix">videogame_asset</i>
-          <input name = "game_name" id="game_name" type="text" class="validate" required>
-          <label for="game_name">Title of Game</label>
-        </div>
-      </div><!--game_name-->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
-          <input id="publisher" name="publisher" type="text" class="validate">
-          <label for="publisher">Developer(s)</label>
-        </div>
-      </div><!--publisher-->
-      <div class="row">
-        <div class="input-field col s12" id="calender">
-          <i class="material-icons prefix">today</i>
-          <input id="release" name="release" type="text" class="datepicker">
-          <label for="release">Release Date</label>
-        </div>
-      </div><!--release-->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="far fa-question-circle prefix"></i>
-          <input id="genre" name="genre" type="text" class="validate">
-          <label for="genre">Genre</label>
-        </div>
-      </div> <!--genre-->
-      <div class="row" id="list">
-        <div class="input-field col s12">
-          <i class="fas fa-tv prefix"></i>
-          <select multiple id="platform" name="platform" >
-            <option value="" disabled selected>Choose Platform</option>
-            {% for platform in platforms %}
-            <option value="{{platform.platform_name}}">{{platform.platform_name}}</option>
-                  {% endfor %}
-          </select>
-          <label>Choose Platform</label>
-        </div>
-     </div><!--platform-->
-     <div class="row">
-       <div class="input-field col s12" id="multiplayer">
-         <i class="fas fa-gamepad prefix"></i>
-           <select id="multiplayer" name="multiplayer">
-             <option value="" disabled selected>Select One</option>
-             <option value="Yes">Yes</option>
-             <option value="No">No</option>
-           </select>
-           <label>Local Multiplayer?</label>
-       </div>
-     </div><!--multiplayer-->
-     <div class="row" id="list">
-       <div class="input-field col s12">
-         <i class="far fa-star prefix"></i>
-         <select id="rating" name="rating">
-           <option value="" disabled selected>Rating</option>
-           {% for rate in ratings %}
-           <option value="{{rate.rating}}">{{rate.rating}}</option>
-           {% endfor %}
-          </select>
-          <label>Game Rating</label>
-        </div>
-      </div><!--rating-->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">create</i>
-          <textarea name="description" id="description" class="materialize-textarea"></textarea>
-          <label for="description">Game Description</label>
-        </div>
-      </div><!--description-->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">add_photo_alternate</i>
-          <input name = "image" id="image" type="text" class="validate">
-          <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
-        </div>
+  <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
+    <div class="row">   
+      <div class="input-field col s12">
+        <i class="material-icons prefix">videogame_asset</i>
+        <input name = "game_name" id="game_name" type="text" class="validate" required>
+        <label for="game_name">Title of Game</label>
       </div>
-      <div class="row">
-        <button class="btn waves-effect waves-light center-button" type="submit" name="action" white>Add Review
-          <i class="material-icons right">add</i>
-        </button>
-      </div><!--button-->
-    </form>
-  </div>
-  </div>
-  </div>
-  </div>
+    </div><!--game_name area-->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="fa fa-cogs prefix" aria-hidden="true"></i>
+        <input id="publisher" name="publisher" type="text" class="validate">
+        <label for="publisher">Developer(s)</label>
+      </div>
+    </div><!--publisher area-->
+    <div class="row">
+      <div class="input-field col s12" id="calender">
+        <i class="material-icons prefix">today</i>
+        <input id="release" name="release" type="text" class="datepicker">
+        <label for="release">Release Date</label>
+      </div>
+    </div><!--release date area-->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="far fa-question-circle prefix"></i>
+        <input id="genre" name="genre" type="text" class="validate">
+        <label for="genre">Genre</label>
+      </div>
+    </div> <!--genre area-->
+    <div class="row" id="list">
+      <div class="input-field col s12">
+        <i class="fas fa-tv prefix"></i>
+        <select multiple id="platform" name="platform" >
+          <option value="" disabled selected>Choose Platform</option>
+          {% for platform in platforms %}
+          <option value="{{platform.platform_name}}">{{platform.platform_name}}</option>
+          {% endfor %}
+        </select>
+        <label>Choose Platform</label>
+      </div>
+    </div><!--platform select area-->
+    <div class="row">
+      <div class="input-field col s12" id="multiplayer">
+        <i class="fas fa-gamepad prefix"></i>
+        <select id="multiplayer" name="multiplayer">
+          <option value="" disabled selected>Select One</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
+        <label>Local Multiplayer?</label>
+      </div>
+    </div><!--multiplayer select area-->
+    <div class="row" id="rate-list">
+      <div class="input-field col s12">
+        <i class="far fa-star prefix"></i>
+        <select id="rating" name="rating">
+          <option value="" disabled selected>Rating</option>
+          {% for rate in ratings %}
+          <option value="{{rate.rating}}">{{rate.rating}}</option>
+          {% endfor %}
+        </select>
+        <label>Game Rating</label>
+      </div>
+    </div><!--rating select area-->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="material-icons prefix">create</i>
+        <textarea name="description" id="description" class="materialize-textarea"></textarea>
+        <label for="description">Game Description</label>
+      </div>
+    </div><!--description area-->
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="material-icons prefix">add_photo_alternate</i>
+        <input name = "image" id="image" type="text" class="validate">
+        <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
+      </div> 
+    </div><!--game screenshot area-->
+    <div class="row">
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action" white>Add Review
+        <i class="material-icons right">add</i>
+      </button>
+    </div><!--Add Review button-->
+  </form>  
+</div><!--form to add a game review-->
 {% endblock %}
