--- a/templates/base.html
+++ b/templates/base.html
@@ -1,77 +1,78 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>WhatGame?</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-		integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="{{url_for('static',filename='css/style.css' )}}">
-</head>
-<body>
-<div class="wrapper">
-	<header>
-		<nav>
-			<div class="nav-wrapper black">
-				<a href="{{url_for('all_games')}}" class="brand-logo">WhatGame?</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="{{url_for('all_games')}}">View All Reviews</a></li>
-                    <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
-					<li><a href="{{url_for('add_review')}}">Add a Review</a></li>
-					<li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
-				</ul>
-                <ul class="side-nav black" id="mobile-demo">
-                    <li><a href="{{url_for('view_games')}}">View All Reviews</a></li>
-                    <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
-                    <li><a href="{{url_for('add_review')}}">Add a Review</a></li>
-                    <li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
-                    
-                </ul>
-			</div>
-		</nav>
-	</header>
+  </head>
+  <body>
+  <div class="wrapper">
+    <header>
+	  <nav>
+	    <div class="nav-wrapper black">
+		  <a href="{{url_for('all_games')}}" class="brand-logo">WhatGame?</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+	  	  <ul id="nav-mobile" class="right hide-on-med-and-down">
+		    <li><a href="{{url_for('all_games')}}">View All Reviews</a></li>
+            <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
+			<li><a href="{{url_for('add_review')}}">Add a Review</a></li>
+			<li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>
+		  </ul>
+          <ul class="side-nav black" id="mobile-demo">
+            <li><a href="{{url_for('view_games')}}">View All Reviews</a></li>
+            <li><a href="{{url_for('top_rated')}}">Top Rated</a></li>
+            <li><a href="{{url_for('add_review')}}">Add a Review</a></li>
+            <li><a href="{{url_for('show_platform_form')}}">Add a Platform</a></li>                
+          </ul>
+		</div>
+	  </nav>
+	</header><!--Navigation Bar-->
     <div class="container">
 	  {% block content %}
 	  {% endblock %}
     </div>
-    </div>
+  </div><!--Wrapper around Header and Body-->
     <footer>
-        © David Tynan 2020
-      </footer>
-    
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+      © David Tynan 2020
+    </footer><!--Copyright Footer-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script type="text/javascript">
-		$(document).ready(function() {
-            $('select').material_select();
-            $(".button-collapse").sideNav();
-        });
-      $('.datepicker').pickadate({
-            selectMonths: true, // Creates a dropdown to control month
-            selectYears: 15, // Creates a dropdown of 15 years to control year,
-            today: 'Today',
-            clear: 'Clear',
-            close: 'Ok',
-            closeOnSelect: false // Close upon selecting a date,
-        });
-    document.getElementById("calender").addEventListener("click", function(e) {
-	e.stopPropagation();
-});
-  document.getElementById("multiplayer").addEventListener("click", function(e) {
-	e.stopPropagation();
-});
-  document.getElementById("list").addEventListener("click", function(e) {
-	e.stopPropagation();
-});
-	</script>
-</body>
+	  $(document).ready(function() {
+        $('select').material_select();
+        $(".button-collapse").sideNav();//Allows the menu to show on side when menu icon is selected on smaller screens
+      });
 
+      $('.datepicker').pickadate({
+        selectMonths: true, 
+        selectYears: 15, 
+        today: 'Today',
+        clear: 'Clear',
+        close: 'Ok',
+        closeOnSelect: false 
+      });//Shows calender when release date is selected in form
+    
+      document.getElementById("calender").addEventListener("click", function(e) {
+	    e.stopPropagation();
+      });//Allows calender to stay on screen when release date is selected in form
+
+      document.getElementById("multiplayer").addEventListener("click", function(e) {
+	    e.stopPropagation();
+      });//Allows local multiplayer options to stay on screen when local multiplayer is selected in form
+
+      document.getElementById("list").addEventListener("click", function(e) {
+	    e.stopPropagation();
+      });//Allows platform options to stay on screen when platform is selected in form
+
+      document.getElementById("rate-list").addEventListener("click", function(e) {
+	    e.stopPropagation();
+      });//Allows local rating options to stay on screen when rating is selected in form
+    </script>
+  </body>
 </html>
