--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -1,63 +1,61 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="game_page_html">
-<div class="row">
-  <div class="col s12 game-name">
-    {{game.game_name}}
-  </div>
-</div><!--Game Name-->
-<div class="row">
-  <div class="col-sm-12 col-md-6">
-    <img src = "{{game.image}}" class="game-page-image">
-  </div><!--Game Image-->
-  <div class="col-sm-12 col-md-6">
-    <div class="game_text">
-      <div class="rating">
-        <i class="far fa-star"></i>
-        <strong>Rating:</strong> {{game.rating}}
-      </div>
-      <div class="publisher">
-        <i class="fas fa-cogs"></i>
-        <strong>Publisher:</strong> {{game.publisher}}
-	  </div><!--Publisher second in accordian body-->
-      <div class="date">
-        <i class="fas fa-calendar-day"></i>
-        <strong>Release Date:</strong> {{game.release}}
-      </div><!--Release Date third in accordian body-->
-      <div class="genre">
-        <i class="far fa-question-circle"></i>
-        <strong>Genre:</strong> {{game.genre}}</h6>
-      </div><!--Genre fourth in accordian body-->
-      <div class="platform">
-        <i class="fas fa-tv"></i>
-        <strong>Platform:</strong> {{game.platform}}
-      </div><!--Platform fifth in accordian body-->
-      <div class="multiplayer">
-        <i class="fas fa-gamepad"></i>
-        <strong>Local Multiplayer?</strong>{{game.multiplayer}}
-     </div><!--Local Multiplayer sixth in accordian body-->
-    </div> 
-  </div><!--Text beside the Game picture-->
-</div>
-<div class="row">
-  <div class="col s12">
-    <div class="description">
-      <strong>Overview</strong>
+  <div class="row">
+    <div class="col s12 game-name">
+      {{game.game_name}}
+    </div>
+  </div><!--Game Name-->
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <img src = "{{game.image}}" class="game-page-image">
+    </div><!--Game Image-->
+    <div class="col-sm-12 col-md-6">
+      <div class="game_text">
+        <div class="rating">
+          <i class="far fa-star"></i>
+          <strong>Rating:</strong> {{game.rating}}
+        </div><!--Game Rating-->
+        <div class="publisher">
+          <i class="fas fa-cogs"></i>
+          <strong>Publisher:</strong> {{game.publisher}}
+	    </div><!--Game Publisher-->
+        <div class="date">
+          <i class="fas fa-calendar-day"></i>
+          <strong>Release Date:</strong> {{game.release}}
+        </div><!--Game Release Date-->
+        <div class="genre">
+          <i class="far fa-question-circle"></i>
+          <strong>Genre:</strong> {{game.genre}}</h6>
+        </div><!--Game Genre-->
+        <div class="platform">
+          <i class="fas fa-tv"></i>
+          <strong>Platform:</strong> {{game.platform}}
+        </div><!--Game Platform-->
+        <div class="multiplayer">
+          <i class="fas fa-gamepad"></i>
+          <strong>Local Multiplayer?</strong>{{game.multiplayer}}
+        </div><!--Game Multiplayer-->
+      </div> 
+    </div><!--Text beside the Game picture-->
+  </div><!--Game Image and Text beside the Game image-->
+  <div class="row">
+    <div class="col s12">
+      <h2><strong>Overview</strong></h2>
       <p>{{game.description}}</p>
     </div>
-  </div>
-</div><!--Game Description Area-->
-<div class="row">
-  <div class="buttons">
-    <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
-      <i class="material-icons">edit</i>
-      Edit 
-    </a><!--Edit Review Button-->  
-    <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn ">
-      <i class="material-icons">delete</i>
-      Delete 
-    </a><!--Delete Review Button--> 
-  </div>
-</div>
+  </div><!--Game Description Area-->
+  <div class="row">
+    <div class="buttons">
+      <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
+        <i class="material-icons">edit</i>
+        Edit 
+      </a><!--Edit Review Button-->  
+      <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn ">
+        <i class="material-icons">delete</i>
+        Delete 
+      </a><!--Delete Review Button--> 
+    </div>
+  </div><!--Edit and Delete Review Buttons-->
 </div>
 {% endblock %}
