--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Top Rated Games</h1>
+<h1>All Game Reviews</h1>
 <div class="row">
   <div class="col s12">
     <ul>
-      {% for game in games %}
+    {% for game in games %}
       <li>
         <div class="all-games-summary">
           <div class="row">
@@ -14,19 +14,17 @@
                 <br>
                 View Full Review
               </a>
-            </div><!--See Full Review Button-->
+            </div>
             <div class="name_and_rating">
-              {{game.game_name}}
-              <br> 
-              Rating: {{game.rating}}
+              {{game.game_name}}<br> Rating: {{game.rating}}
             </div><!--Game Name & Rating-->
-          </div><!--See full review button and game name with rating-->
+          </div>
         </div>
       </li>
-      {% endfor %}
+    {% endfor %}
     </ul>
   </div>
-</div>
+  </div>
 
 
 {% endblock %}
