--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -2,6 +2,17 @@
 {% block content %}
 <h1>All Game Reviews</h1>
 <div class="row">
+<form action = "{{url_for('search_query', query = query)}}" method = "POST" class="col s12">
+    <div class="row">   
+      <div class="input-field col s12">
+        <i class="material-icons prefix">search</i>
+        <input name = "search_query" id="search_query" type="text" class="validate" required>
+        <label for="game_name">Search Games</label>
+      </div>
+      </div>
+      </form>
+     </div>
+<div class="row">
   <div class="col s12">
     <ul>
       {% for game in games %}
