--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col s12">
     <ul>
-    {% for game in games %}
+    {% for game in query %}
       <li>
         <div class="all-games-summary">
           <div class="row">
