--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col s12">
     <ul>
-    {% for game in query %}
+   {% for game in results %}
       <li>
         <div class="all-games-summary">
           <div class="row">
@@ -21,7 +21,7 @@
           </div>
         </div>
       </li>
-    {% endfor %}
+{%endfor%}
     </ul>
   </div>
   </div>
