each game review page showing game name in url for the review

--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>All Game Reviews</h1>
 <div class="row">
-<form action = "{{url_for('search', game_name=.game_name)}}" method = "POST" class="col s12">
+<form action = "{{url_for('search')}}" method = "GET" class="col s12">
     <div class="row">   
       <div class="input-field col s12">
         <i class="material-icons prefix">search</i>
@@ -19,7 +19,7 @@
       <li>
         <div class="all-games-summary">
           <div class="row">
-            <a href="{{url_for('show_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
+            <a href="{{url_for('show_review', game_name=game.game_name)}}"class="waves-effect waves-light btn game-btn">
               <i class="material-icons">remove_red_eye</i>
               <br>
               View Full Review
