--- a/static/css/style.css
+++ b/static/css/style.css
@@ -233,6 +233,17 @@ footer {
     margin-top: 5px;
 }
 
+.edit_review_button{
+    color: white;
+    text-align: center;
+    margin: 10px;
+}
+
+.edit_review_button a{
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+}
 
 
 
