--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -9,7 +9,7 @@
       <li>
         <div class="all-games-summary">
           <div class="row">
-            <a href="{{url_for('show_review', game_name=game.game_name)}}"class="waves-effect waves-light btn game-btn">
+            <a href="{{url_for('show_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
               <i class="material-icons">remove_red_eye</i>
               <br>
               View Full Review
