form label for game screenshot area changed

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Add a Game Review</h1>
-<h2>If you cant find your platform listed, you can add a new platform to our collection by clicking 'Add a Platform' at the top of the page</h2>
+<h2>If you cant find your platform listed, you can add a new platform to our collection by clicking 'Add a Platform' in the Menu above</h2>
 <div class="row">
   <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
     <div class="row">   
@@ -78,7 +78,7 @@
       <div class="input-field col s12">
         <i class="material-icons prefix">add_photo_alternate</i>
         <input name = "image" id="image" type="text" class="validate" required>
-        <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
+        <label for="image">Game Screenshot URL</label>
       </div> 
     </div><!--game screenshot area-->
     <div class="row">
