--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -92,7 +92,7 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">add_photo_alternate</i>
           <input name = "image" id="image" type="text" class="validate" value = "{{game.image}}" required>
-          <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
+          <label for="image">Game Screenshot URL</label>
         </div>
       </div>
       <div class="row">
