--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -57,5 +57,10 @@
       </a><!--Delete Review Button--> 
     </div>
   </div><!--Edit and Delete Review Buttons-->
+  <div class="comment-area">
+    <form action="">
+      <textarea name="comment_area" id="" cols="30" rows="10"></textarea>
+    </form>
+  </div>
 </div>
 {% endblock %}
