--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>All Game Reviews</h1>
-
+<form action="{{url_for('search')}}" method="GET" class="col-sm-4">
+<label for="search">Enter Search Query</label>
+<input type="text" name="search" id="search">
+</form>
 <div class="row">
   <div class="col s12">
     <ul>
